Added Morrison et al
Former-commit-id: 51374e99adc716f249c1151254ec0c54ecf712ba

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -53,6 +53,15 @@
 	url = {http://www.teos-10.org/software.htm}
 }
 
+@article{Morrison:2000,
+  title = {{The McLane moored profiler: A platform for physical, biological, and chemical oceanographic measurements}},
+  author = {{Morrison}, A. ~T. and {Billings}, J. ~D. and {Doherty}, K. ~W. and {Toole}, J. ~M.},
+  journal = {Proceedings of the Oceanology International 2000 Conference, Brighton, UK, 7–10 March 2000},
+  year = {2000},
+  month = mar,
+  publisher = {Oceanology International}
+}
+
 @article{Trowbridge:2019,
   doi = {10.3389/fmars.2019.00074},
   url = {https://www.frontiersin.org/articles/10.3389/fmars.2019.00074/full},
